<resources>
    <string name="app_name">Chika</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="chika_user">Chika Peeps</string>
    <string name="message">Type a message</string>
    <string name="no_account_yet">Don\'t have an account yet?</string>
    <string name="create_one">Create One</string>
    <string name="material_toolbar_default">Messages</string>
</resources>